--- a/pform.html
+++ b/pform.html
@@ -8,7 +8,7 @@
     <h1>Formularios en HTML</h1>
 
     <h2>Formulario GET cdmx.gob.mx</h2>
-    <form action="https://www.cdmx.gob.mx/public/resultadoBuscador.xhtml" method="get" target="_blank">
+    <form action="https://www.cdmx.gob.mx/public/resultadoBuscador.xhtml">
       <label for="searchInput">Buscar en cdmx.gob.mx:</label>
       <input
         type="text"
